# gavellm

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
cli/: gavellm.py
prompts/: format_compliance.yaml  groundedness.yaml
src/gavellm/: __init__.py  llm.py
src/gavellm/core/: prompt.py  task.py  types.py
src/gavellm/io/: jsonl.py
src/gavellm/rules/: format.py  groundedness.py
src/gavellm/tasks/: format_compliance.py  groundedness.py
tasks/: format_compliance.sample.jsonl  groundedness.sample.jsonl
tests/: test_cli_end_to_end.py  test_llm.py  test_llm_integration.py  test_prompt.py  test_rules.py  test_tasks_integration.py
